data/derived/comb/progs/unify/prog5697.ml.out
Characters 29-31:
  let f x = let xx = x*x*x in (xx xx<100) in 
                               ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
